# pulpino

sw/: CMakeLists.txt
sw/apps/: CMakeLists.txt
sw/apps/CMSIS_tests/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_BasicMathFunctions1/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_BasicMathFunctions2/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_ComplexMathFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_ControllerFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FastMathFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions1/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions2/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions3/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions4/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions5/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions6/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_FilteringFunctions7/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_InterpolationFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_MatrixFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_StatisticsFunctions/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_SupportFunction/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions1/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions2/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions3/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions4/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions5/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions6/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions7/: CMakeLists.txt
sw/apps/CMSIS_tests/Benchmark_TransformFunctions8/: CMakeLists.txt
sw/apps/CMSIS_tests/riscv_class_marks_example/: CMakeLists.txt
sw/apps/CMSIS_tests/riscv_dotproduct_example/: riscv_dotproduct_example_f32.c
sw/apps/CMSIS_tests/riscv_fft_bin_example/: CMakeLists.txt  riscv_fft_bin_data.c  riscv_fft_bin_example_f32.c
sw/apps/CMSIS_tests/riscv_fir_example/: CMakeLists.txt  riscv_fir_data.c  riscv_fir_example_f32.c
sw/apps/CMSIS_tests/riscv_matrix_example/: CMakeLists.txt
sw/apps/CMSIS_tests/riscv_variance_example/: CMakeLists.txt
sw/libs/CMSIS_lib/: CMakeLists.txt  README.md
sw/libs/CMSIS_lib/inc/: riscv_common_tables.h  riscv_const_structs.h
sw/libs/CMSIS_lib/src/BasicMathFunctions/: riscv_shift_q15.c
sw/libs/CMSIS_lib/src/FilteringFunctions/: riscv_biquad_cascade_df1_q15.c  riscv_conv_partial_q15.c
