
add_subdirectory(riscv_dotproduct_example)
add_subdirectory(riscv_sin_cos_example)
add_subdirectory(Benchmark_BasicMathFunctions1)
add_subdirectory(Benchmark_BasicMathFunctions2)
add_subdirectory(Benchmark_FastMathFunctions)
add_subdirectory(Benchmark_ComplexMathFunctions)
add_subdirectory(riscv_matrix_example)
add_subdirectory(Benchmark_MatrixFunctions)
add_subdirectory(Benchmark_StatisticsFunctions)
add_subdirectory(Benchmark_SupportFunction)
add_subdirectory(riscv_class_marks_example)
add_subdirectory(Benchmark_FilteringFunctions1)
add_subdirectory(Benchmark_FilteringFunctions2)
add_subdirectory(Benchmark_FilteringFunctions3)
add_subdirectory(Benchmark_FilteringFunctions4)
add_subdirectory(Benchmark_FilteringFunctions5)
add_subdirectory(Benchmark_FilteringFunctions6)
add_subdirectory(Benchmark_FilteringFunctions7)
add_subdirectory(riscv_variance_example)
add_subdirectory(riscv_fir_example)
add_subdirectory(Benchmark_ControllerFunctions)
add_subdirectory(Benchmark_InterpolationFunctions)
add_subdirectory(Benchmark_TransformFunctions1)
add_subdirectory(Benchmark_TransformFunctions2)
add_subdirectory(Benchmark_TransformFunctions3)
add_subdirectory(Benchmark_TransformFunctions4)
add_subdirectory(Benchmark_TransformFunctions5)
add_subdirectory(Benchmark_TransformFunctions6)
add_subdirectory(Benchmark_TransformFunctions7)
add_subdirectory(Benchmark_TransformFunctions8)
